cmake_minimum_required(VERSION 3.15)

set(CMAKE_SYSTEM_VERSION "10.0.18362")
# set(CMAKE_SYSTEM_VERSION "10.0.19041")

project(brokenithm-kb VERSION 0.2.0)

message("Using kit " "${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}")

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_subdirectory(src)
